--- a/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ionic-angular-course/ionic-angular-course-project/ionic.config.json
+++ b/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ionic-angular-course/ionic-angular-course-project/ionic.config.json
@@ -1,5 +1,7 @@
 {
   "name": "ionic-angular-course-project",
-  "integrations": {},
+  "integrations": {
+    "capacitor": {}
+  },
   "type": "angular"
 }
