--- a/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ionic-angular-course/ionic-angular-course-project/android/app/src/main/assets/capacitor.config.json
+++ b/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ionic-angular-course/ionic-angular-course-project/android/app/src/main/assets/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-	"appId": "io.ionic.starter",
+	"appId": "com.udemy_course.ionic-angular",
 	"appName": "ionic-angular-course-project",
 	"webDir": "www",
 	"bundledWebRuntime": false
