--- a/udemy/Ionic-Build_iOS_Android_&_Web_Apps_with_Ionic_&_Angular/ionic-angular-course/ionic-angular-course-project/ios/App/App/capacitor.config.json
+++ b/udemy/Ionic-Build_iOS_Android_&_Web_Apps_with_Ionic_&_Angular/ionic-angular-course/ionic-angular-course-project/ios/App/App/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-	"appId": "com.udemy_course.ionic-angular",
+	"appId": "com.udemy_course.ionic_angular",
 	"appName": "ionic-angular-course-project",
 	"webDir": "www",
 	"bundledWebRuntime": false
